src/test/deca/context/valid/22_Minus.deca
// Description:
//    Test pour les opérations (minus)
//
// Historique:
//    cree le 16/01/2022

{
    int x = 1;
    x = 1 - x;
}
