src/test/deca/context/invalid/42_CallSigError.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 16: ContextualError: f: unmatched signature
// 
// Historique:
//    cree le 01/01/2022

class A {
	void f() {}
}
{
   A a = new A();
   // Doit etre refuse.
   a.f(1);
}
